# llm-risk-assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_data.py
data/: README.md
data/cases/: historical_cases.csv
data/policies/: card_fraud_policy.md
data/transactions/: edge_cases.json  sample_transaction.json  test_transactions.json
notebooks/: evaluations.ipynb
src/: agent.py  data_loader.py  decision_logic.py  evaluate.py  ingest.py  prompts.py  retrieval.py  run_assessment.py  schemas.py  validation.py
